--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "chat-ghost",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
+  "homepage": "https://isth3root.github.io/ghost-chat",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
